# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = libUCP2PCtrl.h \
	../libUCP2PCtrl/UCP2PCtrl.h \
	../libUCP2PCtrl/typedef.h \
	../libUCP2PCtrl/Queue.h \
	../libUCP2PCtrl/CVideoInfo.h \
	../libUCP2PCtrl/AccessInfo.h \
	../libUCP2PCtrl/ERTSPAppType.h